try to fix hover state on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,13 +13,3 @@
 .roboto-mono {
   font-family: 'RobotoMono', sans-serif;
 }
-
-.nav-hover a {
-  color: #52414C;
-  transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-hover a:hover {
-  color: #EF8A17;
-}
-
